--- a/css/init.scss
+++ b/css/init.scss
@@ -250,7 +250,7 @@ background-color: #02cbff;
 border-radius: 5px;
 border: 1px black solid;
 color: #000;
-margin: 2em 0;
+margin: 2em 0 1em;
 padding: .5em 1em;
 
   a, button, h3 {
