--- a/css/init.scss
+++ b/css/init.scss
@@ -112,6 +112,7 @@ background-color: #666;
 border-radius: 4px;
 color: white;
 display: inline-block;
+margin: 2px;
 padding: .2em 1em;
 word-wrap: break-word;
 }
