--- a/css/init.scss
+++ b/css/init.scss
@@ -199,7 +199,7 @@ word-wrap: break-word;
 }
 
 sup {
-font-size: px(5);
+font-size: 8px;
 }
 
 video {
@@ -273,10 +273,6 @@ padding: .5em 1em;
     width: 50px;
     }
 
-  }
-
-  h3 {
-  font-size: 1.1rem;
   }
 
   code {
