--- a/css/init.scss
+++ b/css/init.scss
@@ -223,7 +223,7 @@ color: #000;
 }
 
 .resource-info {
-background-color: #fd7d27;
+background-color: #f8924d;
 
   h2 {
 
@@ -236,7 +236,7 @@ background-color: #fd7d27;
 }
 
 .qa-info {
-background-color: #02cbff;
+background-color: #73e0fc;
 
   h2 {
 
