--- a/css/init.scss
+++ b/css/init.scss
@@ -232,7 +232,7 @@ color: #000;
 }
 
 .reminder-info {
-background-color: ##f3b912;
+background-color: #f3b912;
 
   h2:first-child {
 
@@ -270,7 +270,7 @@ background-color: #73e0fc;
 
 }
 
-.a11y-info, .resource-info, .qa-info {
+.a11y-info, .resource-info, .qa-info, .reminder-info {
 border-radius: 5px;
 border: 1px black solid;
 color: #000;
