--- a/css/init.scss
+++ b/css/init.scss
@@ -123,7 +123,7 @@ color: #fff;
 kbd {
 background-color: #ccc;
 color: #000;
-outline: 1px dotted black
+border: 1px dotted black
 }
 
 h1, h2, h3, h4, h5, h6, caption, table {
