--- a/css/init.scss
+++ b/css/init.scss
@@ -120,6 +120,17 @@ background-color: #333;
 color: #fff;
 }
 
+details {
+
+  nav {
+  background-color: #efefef;
+  border-radius: 10px;
+  margin: 1em 0;
+  padding: 1em;
+  }
+
+}
+
 kbd {
 background-color: #ccc;
 color: #000;
