--- a/css/init.scss
+++ b/css/init.scss
@@ -196,6 +196,12 @@ select::-ms-expand {
 display: none !important;
 }
 
+textarea {
+display:block;
+margin:auto;
+width:100%;
+}
+
 pre {
 white-space: pre;
 white-space: pre-wrap;
