--- a/css/init.scss
+++ b/css/init.scss
@@ -192,6 +192,11 @@ input[type="checkbox"], input[type="radio"] {
 appearnace: checkbox;
 }
 
+label {
+display: inline-block;
+margin-bottom: .5em;
+}
+
 select::-ms-expand {
 display: none !important;
 }
