--- a/css/init.scss
+++ b/css/init.scss
@@ -132,6 +132,16 @@ details {
 
 }
 
+figure {
+margin: 1em 0;
+
+  figcaption {
+  font-size: 13px;
+  margin: 1em 0 0;
+  }
+
+}
+
 kbd {
 background-color: #ccc;
 color: #000;
