--- a/css/init.scss
+++ b/css/init.scss
@@ -155,6 +155,11 @@ line-height: normal;
 margin: 1em 0;
 }
 
+h3 {
+color: $highlight-color;
+font-size: 18px;
+}
+
 hr[aria-hidden="true"] {
 border: 0;
 border-bottom: 1px dashed $highlight-color;
