--- a/css/init.scss
+++ b/css/init.scss
@@ -88,10 +88,10 @@ a {
   &.external {
   background: transparent url(data:image/gif;base64,R0lGODlhCgAKAJECAP///5mZmQAAAAAAACH5BAEAAAIALAAAAAAKAAoAAAIalIMZJgH/1gGJqugQpFzH7TlWJVJMGZ0KwhQAOw==)center right no-repeat;
   padding-right: 14px;
-
     &:focus, &:hover {
     background: url(data:image/gif;base64,R0lGODlhCgAKAJECAP///2eIpAAAAAAAACH5BAEAAAIALAAAAAAKAAoAAAIalIMZJgH/1gGJqugQpFzH7TlWJVJMGZ0KwhQAOw==)center right no-repeat;
     }
+
 
   }
 
@@ -134,11 +134,11 @@ details {
 
 figure {
 margin: 1em 0;
-
   figcaption {
   font-size: 13px;
   margin: 1em 0 0;
   }
+
 
 }
 
@@ -171,12 +171,12 @@ margin: 3em 0 2em;
 
 html {
 box-sizing: border-box;
-
   @media (prefers-reduced-motion: no-preference) {
 
     scroll-behavior: smooth;
 
   }
+
 
 }
 
@@ -231,12 +231,10 @@ pre {
 white-space: pre;
 white-space: pre-wrap;
 word-wrap: break-word;
-
   code {
   display: block;
   margin: 0;
   padding: 1em;
-
     strong {
     color: #b4dcf6;
     }
@@ -246,6 +244,8 @@ word-wrap: break-word;
     }
 
   }
+
+
 
 }
 
@@ -261,7 +261,6 @@ width: 100%;
 .a11y-info {
 background-color: #40E8D4;
 color: #000;
-
   h2:first-child {
 
     &::before {
@@ -271,16 +270,17 @@ color: #000;
 
   }
 
+
 }
 
 .disclosure--btn {
 border-radius: 5px;
 font-size: inherit;
 margin: 4px 0;
-
   &[aria-expanded="true"] {
   background-color: lightslategray;
   }
+
 
 }
 
@@ -293,7 +293,6 @@ padding: 0 1em;
 
 .reminder-info {
 background-color: #f5cd01;
-
   h2:first-child {
 
     &::before {
@@ -302,11 +301,11 @@ background-color: #f5cd01;
 
   }
 
+
 }
 
 .resource-info {
 background-color: #f8924d;
-
   h2:first-child {
 
     &::before {
@@ -315,11 +314,11 @@ background-color: #f8924d;
 
   }
 
+
 }
 
 .qa-info {
 background-color: #dfc9f8;
-
   h2:first-child {
 
     &::before {
@@ -327,6 +326,7 @@ background-color: #dfc9f8;
     }
 
   }
+
 
 }
 
@@ -336,7 +336,6 @@ border: 1px black solid;
 color: #000;
 margin: 1em 0;
 padding: .5em 1em;
-
   a, button, h3 {
   color: inherit;
   }
@@ -365,6 +364,7 @@ padding: .5em 1em;
   color: inherit;
   }
 
+
 }
 
 .alert {
@@ -375,12 +375,12 @@ text-decoration: none;
 
 .app-only {
 display: none;
-
 	@media(display-mode: minimal-ui) {
 
 		display: block;
 
 	}
+
 
 }
 
@@ -400,7 +400,6 @@ text-transform: uppercase;
 list-style: none;
 margin: 0;
 padding: 0;
-
   li {
 
     @media(min-width: 680px) {
@@ -416,6 +415,7 @@ padding: 0;
 
   }
 
+
 }
 
 .new-window {
@@ -425,11 +425,9 @@ text-align: right;
 
 .param {
 margin-bottom: 3em;
-
   code {
   display: block;
   margin: 5px 0;
-
     @media(min-width: 680px) {
 
       display: inline-block;
@@ -438,6 +436,8 @@ margin-bottom: 3em;
     }
 
   }
+
+
 
 }
 
@@ -455,7 +455,6 @@ width: 1px;
 height: 0;
 position: relative;
 width: 100%;
-
   iframe {
   border: 0;
   height: 100%;
@@ -465,13 +464,21 @@ width: 100%;
   width: 100%;
   }
 
+
 }
 
 #author {
+background-color: #eee;
+border-radius: 10px;
+margin-top: 1em;
+padding: 1em;
+
+  h2 {
+  margin: 0 0 .5em 0;
+  }
 
   img {
   display: inline-block;
-  width: 180px;
   width: 90px;
   margin: 0 1em 0 0;
   vertical-align: middle;
@@ -489,7 +496,6 @@ width: 100%;
 background-color: $highlight-color;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
-
   a {
   color: white;
   display: inline-block;
@@ -498,7 +504,6 @@ padding: .8em 8% .4em;
   line-height: normal;
   text-align: right;
   text-decoration: none;
-
     img {
     width: 220px;
     }
@@ -509,6 +514,8 @@ padding: .8em 8% .4em;
     }
 
   }
+
+
 
 }
 
@@ -526,7 +533,6 @@ border: 0;
 color: #fff;
 font-size: 1rem;
 padding: 1em;
-
 	&::before {
 	content: "\f064";
 	display: inline-block;
@@ -537,5 +543,6 @@ padding: 1em;
   text-rendering: auto;
 	margin-right: 5px;
 	}
+
 
 }
