--- a/css/init.scss
+++ b/css/init.scss
@@ -305,6 +305,10 @@ border: 1px #000 solid;
 margin-bottom: 1em;
 padding: .5em 2em;
 
+  ul {
+  padding: 0;
+  }
+
   li {
   display: inline-block;
   margin-right: 1em;
