--- a/css/init.scss
+++ b/css/init.scss
@@ -322,6 +322,11 @@ padding: .5em 2em;
     color: inherit;
     }
 
+    code {
+    background-color: salmon;
+    color: #000;
+    }
+
   }
 
 }
