--- a/css/init.scss
+++ b/css/init.scss
@@ -302,7 +302,7 @@ color: #000;
 .bug {
 border-radius: 5px;
 border: 1px #000 solid;
-margin-bottom: 1em;
+margin: 1em 0;
 padding: .5em 2em;
 
   ul {
