--- a/css/init.scss
+++ b/css/init.scss
@@ -417,7 +417,7 @@ background-color: #f8924d;
 }
 
 .warning-info {
-background-color: ##dda1a1;
+background-color: #dda1a1;
 border-color: red;
 
   h2:first-child {
