--- a/css/init.scss
+++ b/css/init.scss
@@ -326,7 +326,7 @@ font-size: inherit;
 margin: 4px 0;
 
   &[aria-expanded="true"] {
-  background-color: lightslategray;
+  background-color: #69788C;
   }
 
 }
