--- a/css/init.scss
+++ b/css/init.scss
@@ -241,6 +241,8 @@ word-wrap: break-word;
   display: block;
   margin: 0;
   padding: 1em;
+  font-size: 1.4em;
+  line-height: 1.8;
 
     strong {
     color: #b4dcf6;
