--- a/css/init.scss
+++ b/css/init.scss
@@ -111,6 +111,7 @@ padding: 1em;
 code, kbd {
 border-radius: 4px;
 display: inline-block;
+font: inherit;
 margin: 2px;
 padding: .2em 1em;
 word-wrap: break-word;
