--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -1,20 +1,56 @@
 
-<h2 id="accessibility-testing-baselines"><a href="/a11y/baseline/">Accessibility Testing Baselines</a></h2>
+<div class="carousel-scroll">
 
-<p>Common accessibility barriers we seek to address in our every day work.</p>
+  <div class="carousel-scroll__container">
 
-<h2 id="code-review-process"><a href="/uid/code-review/">Code Review Process</a></h2>
+    <div class="carousel-scroll__card">
 
-<p>Provides a record of the different resources used to create the code standards guide.</p>
+      <h2 id="accessibility"><a href="/a11y/">Accessibility at Radancy</a></h2>
 
-<h2 id="pattern-library" class="app-only"><a href="/pattern-library/">Pattern Library</a></h2>
+      <p>Accessibility information and tools for employees of Radancy.</p>
 
-<p class="app-only">A library of common design patterns, resources, and functional code for use on your next project.</p>
+    </div>
 
-<h2 id="photoshop-guidelines"><a href="/uid/photoshop-guidelines/">Photoshop Guidelines</a></h2>
+    <div class="carousel-scroll__card">
 
-<p>Guidelines for preparing a photoshop file to be handed off to development teams. Educate Yourself.</p>
+      <h2 id="accessibility-testing-baselines"><a href="/a11y/baseline/">Accessibility Testing Baselines</a></h2>
 
-<h2 id="user-interface-standards-and-guidelines"><a href="/uid/code-standards/">User Interface Standards and Guidelines</a></h2>
+      <p>Common accessibility barriers we seek to address in our every day work.</p>
 
-<p>Our practices for HTML, CSS, and JavaScript development, as well as other industry wide best practices that have been adopted by Radancy designers and developers.</p>
+    </div>
+
+    <div class="carousel-scroll__card">
+
+      <h2 id="code-review-process"><a href="/uid/code-review/">Code Review Process</a></h2>
+
+      <p>Provides a record of the different resources used to create the code standards guide.</p>
+
+    </div>
+
+    <div class="carousel-scroll__card">
+
+      <h2 id="pattern-library" class="app-only"><a href="/pattern-library/">Pattern Library</a></h2>
+
+      <p class="app-only">A library of common design patterns, resources, and functional code for use on your next project.</p>
+
+    </div>
+
+    <div class="carousel-scroll__card">
+
+      <h2 id="photoshop-guidelines"><a href="/uid/photoshop-guidelines/">Photoshop Guidelines</a></h2>
+
+      <p>Guidelines for preparing a photoshop file to be handed off to development teams. Educate Yourself.</p>
+
+    </div>
+
+    <div class="carousel-scroll__card">
+
+      <h2 id="user-interface-standards-and-guidelines"><a href="/uid/code-standards/">User Interface Standards and Guidelines</a></h2>
+
+      <p>Our practices for HTML, CSS, and JavaScript development, as well as other industry wide best practices that have been adopted by Radancy designers and developers.</p>
+
+    </div>
+
+  </div>
+
+</div>
