--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -27,9 +27,9 @@
 
     </div>
 
-    <div class="carousel-scroll__card">
+    <div class="carousel-scroll__card" class="app-only">
 
-      <h2 id="pattern-library" class="app-only"><a href="/pattern-library/">Pattern Library</a></h2>
+      <h2 id="pattern-library"><a href="/pattern-library/">Pattern Library</a></h2>
 
       <p class="app-only">A library of common design patterns, resources, and functional code for use on your next project.</p>
 
