--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -31,7 +31,7 @@
 
       <h2 id="pattern-library"><a href="/pattern-library/">Pattern Library</a></h2>
 
-      <p class="app-only">A library of common design patterns, resources, and functional code for use on your next project.</p>
+      <p>A library of common design patterns, resources, and functional code for use on your next project.</p>
 
     </div>
 
