--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -27,7 +27,7 @@
 
     </div>
 
-    <div class="carousel-scroll__card">
+    <div class="carousel-scroll__card app-only">
 
       <h2 id="pattern-library"><a href="/pattern-library/">Pattern Library</a></h2>
 
