--- a/css/init.scss
+++ b/css/init.scss
@@ -622,6 +622,7 @@ padding: .8em 8% .4em;
 
 #content, #contentinfo, #contribute {
 display: block;
+color: inherit;
 font-size: 1em;
 margin: 0 auto;
 max-width: 1600px;
