--- a/css/init.scss
+++ b/css/init.scss
@@ -598,7 +598,7 @@ background-color: $highlight-color;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
 
-  a {
+  > a {
   color: white;
   display: inline-block;
   font-size: .8rem;
