--- a/css/init.scss
+++ b/css/init.scss
@@ -595,11 +595,12 @@ padding: 1em;
 
 #banner {
 background-color: $highlight-color;
+color: white;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
 
   > a {
-  color: white;
+  color: inherit;
   display: inline-block;
   font-size: .8rem;
   letter-spacing: 1px;
