--- a/css/init.scss
+++ b/css/init.scss
@@ -595,7 +595,7 @@ padding: 1em;
 
 #banner {
 background-color: $highlight-color;
-color: white;
+color: #fff;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
 
