--- a/css/init.scss
+++ b/css/init.scss
@@ -643,7 +643,7 @@ top: .8em;
   background-size: 35px;
   border-radius: 5px;
   border: 0;
-  border: 1px $base-color solid;
+  border: 1px $highlight-color solid;
   height: 45px;
   margin: 0;
   padding: 0;
@@ -661,7 +661,7 @@ top: .8em;
   > ul {
   background-color: #fff;
   border-radius: 5px;
-  border: 1px $base-color solid;
+  border: 1px $highlight-color solid;
   display: none;
   list-style: none;
   margin: 0;
