--- a/css/init.scss
+++ b/css/init.scss
@@ -595,12 +595,11 @@ padding: 1em;
 
 #banner {
 background-color: $highlight-color;
-color: #fff;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
 
   > a {
-  color: inherit;
+  color: white;
   display: inline-block;
   font-size: .8rem;
   letter-spacing: 1px;
