--- a/css/init.scss
+++ b/css/init.scss
@@ -468,7 +468,7 @@ display: none !important;
 
 }
 
-.btn, .btn::file-selector-button {
+.btn, input[type=file]::file-selector-button {
 background-color: #ffcc36;
 border: 0;
 color: #000;
