--- a/css/init.scss
+++ b/css/init.scss
@@ -42,7 +42,7 @@ $weight-black: 900 !default; // Black (Heavy)
 
 // Common variables
 
-$highlight-color: #6F00EF;
+$highlight-color: rebeccapurple;
 $fallback-font: "Helvetica", "Arial", sans-serif;
 
 // Other font variables
