--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 
-<nav aria-label="Primary" id="primary-navigation">
-  
+<nav aria-label="Primary" id="main-navigation">
+
   <ul>
       <li><a href="/a11y/" id="nav-a11y">Accessibility at Radancy</a></li>
       <li><a href="/a11y/baseline/" id="nav-a11y-baseline">Accessibility Testing Baselines</a></li>
