--- a/css/init.scss
+++ b/css/init.scss
@@ -624,7 +624,7 @@ margin: 0 auto;
 max-width: 1600px;
 }
 
-#primary-navigation {
+#main-navigation {
 margin-left: 1em;
 position: absolute;
 right: 1em;
