Removed title from abbr. #a11y

--- a/_archive/_layouts/rwd-school-of-rock.html
+++ b/_archive/_layouts/rwd-school-of-rock.html
@@ -20,7 +20,7 @@
 
 			{% endif %}
 
-			<h1><abbr title="Resposive Web Design">RWD</abbr> School<b>of Rock!</b></h1>
+			<h1><abbr>RWD</abbr> School<b>of Rock!</b></h1>
 
 			{{ content }}
 
