--- a/_archive/respond-ie8/css/src/global.scss
+++ b/_archive/respond-ie8/css/src/global.scss
@@ -63,12 +63,12 @@ animations
 }
 
 /* =================================================================
-style reset - https://github.com/necolas/normalize.css 
+style reset - https://github.com/necolas/normalize.css
 ================================================================= */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
 
 a:active, a:focus, a:hover { outline: 0; }
-abbr[title] { border-bottom: 1px dotted; }
+abbr { border-bottom: 1px dotted; }
 b, strong { font-weight: bold; }
 button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
 button, input, select, textarea { font-family: inherit; font-size: 100%; margin: 0; }
@@ -271,7 +271,7 @@ img {
 	display: block;
 	overflow: hidden;
 }
-	
+
 /* =================================================================
 slides
 ================================================================= */
