--- a/_archive/rwd-school-of-rock/sass/_reset.scss
+++ b/_archive/rwd-school-of-rock/sass/_reset.scss
@@ -1,29 +1,29 @@
 /* Custom CSS Reset - https://github.com/necolas/normalize.css */
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { 
-display: block; 
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+display: block;
 }
 
-a:active, a:focus, a:hover { 
-outline: 0; 
+a:active, a:focus, a:hover {
+outline: 0;
 }
 
-abbr[title] { 
-border-bottom: 1px dotted; 
+abbr { 
+border-bottom: 1px dotted;
 }
 
-b, strong { 
-font-weight: bold; 
+b, strong {
+font-weight: bold;
 }
 
-button, html input[type="button"], input[type="reset"], input[type="submit"] { 
--webkit-appearance: button; 
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+-webkit-appearance: button;
 cursor: pointer;
 }
 
 button, input, select, textarea {
-font-family: inherit; 
-font-size: 100%; 
+font-family: inherit;
+font-size: 100%;
 margin: 0;
 }
 
@@ -31,46 +31,46 @@ button, input {
 line-height: normal;
 }
 
-button, select { 
-text-transform: none; 
+button, select {
+text-transform: none;
 }
 
-button[disabled], html input[disabled] { 
-cursor: default; 
+button[disabled], html input[disabled] {
+cursor: default;
 }
 
-button::-moz-focus-inner, input::-moz-focus-inner { 
-border: 0; padding: 0; 
+button::-moz-focus-inner, input::-moz-focus-inner {
+border: 0; padding: 0;
 }
 
-[hidden] { 
+[hidden] {
 display: none;
 }
 
-html { 
-font-family: sans-serif; 
--webkit-text-size-adjust: 100%; 
--ms-text-size-adjust: 100%; 
+html {
+font-family: sans-serif;
+-webkit-text-size-adjust: 100%;
+-ms-text-size-adjust: 100%;
 -webkit-font-smoothing: antialiased;
 }
 
-img { 
-border: 0; 
+img {
+border: 0;
 max-width: 100%;
 }
 
-input[type="search"] { 
--webkit-appearance: textfield; 
--moz-box-sizing: content-box; 
--webkit-box-sizing: content-box; 
-box-sizing: content-box; 
+input[type="search"] {
+-webkit-appearance: textfield;
+-moz-box-sizing: content-box;
+-webkit-box-sizing: content-box;
+box-sizing: content-box;
 }
 
-input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { 
--webkit-appearance: none; 
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+-webkit-appearance: none;
 }
 
-q {  
+q {
 font-style: italic;
 
 	&:before, &:after {
@@ -81,51 +81,51 @@ font-style: italic;
 
 	}
 
-	&:before { 
+	&:before {
 
 		content: open-quote;
 
 	}
 
-	&:after { 
+	&:after {
 
-		content: end-quote; 
+		content: end-quote;
 
 	}
 
 
 }
 
-small { 
-font-size: 80%; 
+small {
+font-size: 80%;
 }
 
-sub, sup { 
-font-size: 75%; 
-line-height: 0; 
-position: relative; 
-vertical-align: baseline; 
+sub, sup {
+font-size: 75%;
+line-height: 0;
+position: relative;
+vertical-align: baseline;
 }
 
-sub { 
-bottom: -0.25em; 
+sub {
+bottom: -0.25em;
 }
 
-sup { 
-top: -0.5em; 
+sup {
+top: -0.5em;
 }
 
-textarea { 
-overflow: auto; 
-vertical-align: top; 
+textarea {
+overflow: auto;
+vertical-align: top;
 }
 
-table { 
-border-collapse: collapse; 
-border-spacing: 0; 
+table {
+border-collapse: collapse;
+border-spacing: 0;
 }
 
-ul, ol, li { 
-margin: 0; 
+ul, ol, li {
+margin: 0;
 padding: 0;
 }
