--- a/css/init.scss
+++ b/css/init.scss
@@ -319,7 +319,7 @@ padding: .5em 2em;
 
 }
 
-body:not(.rad-disclosure-index) .disclosure--btn {
+body:not(#rad-disclosure-index) .disclosure--btn {
 border-radius: 5px;
 font-size: inherit;
 margin: 4px 0;
@@ -330,7 +330,7 @@ margin: 4px 0;
 
 }
 
-body:not(.rad-disclosure-index) .disclosure--content {
+body:not(#rad-disclosure-index) .disclosure--content {
 border: 1px #cccccc solid;
 border-radius: 5px;
 margin: 4px 0;
