--- a/css/init.scss
+++ b/css/init.scss
@@ -168,7 +168,7 @@ font-weight: bold;
 hr[aria-hidden="true"] {
 border: 0;
 border-bottom: 1px dashed $highlight-color;
-margin: 3em 0 2em;
+margin: 2em 0;
 }
 
 html {
