--- a/css/init.scss
+++ b/css/init.scss
@@ -335,7 +335,7 @@ background-color: transparent;
 border-radius: 5px;
 border: 1px #cccccc solid;
 margin: 4px 0;
-padding: 1em;
+padding: 0 1em;
 }
 
 .a11y-info, .reminder-info, .resource-info, .warning-info, .qa-info {
